# useful-scripts

./: CMakeLists.txt  asm-vm.c  computeBer.c  correctErrors.c  createGenPoly.c  decodeMode.c  decodeReedSolomon.c  encodeData.c  encodeMode.c  encodeReedSolomon.c  erasure.h  findRoots.c  global.c  initErasureLocatorPoly.c  initExpTable.c  main.c  multiplicationPoly.c  parseInput.c  printHelp.c  readEncoded.c  readMeta.c  readPlain.c  support.c  todo  writeEncoded.c  writeMeta.c  writePlain.c
